# siwx-oidc

./: .cursorrules  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PLAN_Upgrade_CAIP_Modular_DESIGN.md  PLAN_webauthn.md  README.md
.claude/commands/: add-auth-ceremony.md  add-cipher-suite.md  add-did-method.md  authenticate-siwe-matrix.md  debug-oidc.md  deploy-check.md  docker-build.md  logic-model.md  siwx-oidc.md
.claude/skills/: add-auth-ceremony.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker.yml
aqua-identity-resolver/: Cargo.toml
aqua-identity-resolver/src/: error.rs  extract.rs  lib.rs  profile.rs  resolver.rs  store.rs
aqua-identity-resolver/test-data/: agent-a-name.aqua.json  agent-a-updated.aqua.json  agent-b-name.aqua.json
aqua-identity-resolver/tests/: update_name.rs
docs/: 2026-05-19-third-party-client-cors-analysis.md  2026-06-14-account-management-e2e-findings.md  element-x-qr-code-protocol-spec.md  siwx-oidc-landscape-comparison.md
docs/audit/: msc3861-compliance-audit.md  spruce-branding-audit.md
docs/audits/: 2026-06-23-elementx-refresh-rotation-signout.md  2026-06-24-cross-signing-reset-fix-logic-model.md  2026-06-24-grace-deploy-device-verify-forensics.md
docs/design/: 2026-06-18-passkey-scoping-and-new-user-gate.md  2026-06-19-passkey-offer-scoping-minimal-behavior.md
docs/superpowers/plans/: 2026-05-19-aqua-rs-auth-integration.md  2026-05-19-cinny-cors-integration.md  2026-05-19-logging-infrastructure.md  2026-05-19-msc3861-compliance.md  2026-05-21-aqua-auth-webauthn-integration.md  2026-05-23-rfc8628-device-authorization-grant.md  2026-06-06-agent-fleet-500s-remediation.md  2026-06-07-msc4191-account-management.md  2026-06-07-msc4191-element-web-account-menu-deactivate.md  2026-06-07-msc4191-profile-action.md  2026-06-09-synapse-lifecycle-teardown.md  2026-06-14-account-management-e2e.md  2026-06-16-webauthn-stale-passkey-signal.md  2026-06-18-passkey-scoping-new-user-gate.md  2026-06-19-passkey-offer-scoping-AUDIT.md  2026-06-19-passkey-offer-scoping-token-derived-CORRECTED.md  2026-06-23-refresh-token-grace.md
e2e/: .gitignore  README.md  down.sh  env.sh  legacy-cs-api-probe.sh  real-stack-edge.sh  run-all.sh  synapse_mock.py  up.sh
e2e/browser/: account.spec.mjs  device-lifecycle.spec.mjs  package.json  passkey-scoping.spec.mjs  playwright.config.mjs  run.sh  shot.mjs  stale-credential.spec.mjs  wallet-helper.mjs  webauthn-helper.mjs
e2e/real-stack/: Caddyfile
js/ui/: package-lock.json  package.json  tsconfig.json  webpack.config.js
js/ui/src/: App.svelte  global.css  main.ts
scripts/: verify-lifecycle-live.sh
siwx-core/: Cargo.toml
siwx-core/src/: cipher_suite.rs  did.rs  did_method.rs  error.rs  lib.rs
siwx-core/src/key/: mod.rs
siwx-core/src/peer/: mod.rs
siwx-core/src/pkh/: ed25519.rs  eip155.rs  method.rs  mod.rs  p256.rs
siwx-oidc-auth/: Cargo.toml
siwx-oidc-auth/src/: lib.rs  main.rs
skills/: add-did-method.md  authenticate-siwe-matrix.md  cross-signing-bootstrap-and-debug.md  debug-oidc.md  deploy-check.md  docker-build.md  element-x-qr-code-specialist.md
src/: account.rs  axum_lib.rs  compat.rs  config.rs  device_auth.rs  identity.rs  introspect.rs  lib.rs  main.rs  oidc.rs  synapse_client.rs  webauthn.rs
src/db/: mod.rs  redis.rs
static/legal/: privacy-policy.html  terms-of-use.html
tests/: e2e_account_management.rs  e2e_device_code.rs  e2e_messaging.rs  e2e_msc3861.rs  e2e_msc4191_live.rs  e2e_oauth_binding.rs  e2e_race_teardown.rs  e2e_session_teardown.rs
