[workspace]
members = ["siwx-core", "siwx-oidc-auth"]
resolver = "2"

[package]
name = "siwx-oidc"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/inblockio/siwx-oidc/"
description = "CAIP-122 to OpenID Connect bridge — Sign-In With X for any DID method."

[dependencies]
siwx-core = { path = "siwx-core" }
alloy-primitives = { version = "1", features = ["serde"] }
alloy = { version = "1", features = ["providers", "transport-http", "contract", "sol-types"] }
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
base64 = "0.22"
bb8-redis = "0.26"
chrono = "0.4"
cookie = "0.18"
figment = { version = "0.10", features = ["toml", "env"] }
headers = "0.4"
hex = "0.4"
lazy_static = "1.4"
openidconnect = "4.0"
p256 = { version = "0.13", features = ["ecdsa", "pem", "jwk"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
subtle = "2"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
env_logger = "0.11"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
test-log = "0.2"
tokio = { version = "1", features = ["macros", "rt"] }

[profile.release]
opt-level = "z"
lto = true
