[package]
name = "aqua-identity-resolver"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Extract verified identity claims from Aqua protocol trees and resolve profiles by DID"

[dependencies]
aqua-rs-sdk = { path = "../../aqua-rs-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
