[package]
name = "siwx-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/inblockio/siwx-oidc/"
description = "Core traits and cipher suites for siwx-oidc."

[dependencies]
# Crypto — cipher suites ported from aqua-rs-auth
k256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
p256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"

hex = "0.4"
thiserror = "2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
rand = "0.8"
