[package]
name = "siwx-oidc-auth"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/inblockio/siwx-oidc/"
description = "Headless OIDC client for siwx-oidc — sign in with a local DID key from the CLI or CI."

[lib]
name = "siwx_oidc_auth"
path = "src/lib.rs"

[[bin]]
name = "siwx-oidc-auth"
path = "src/main.rs"

[dependencies]
siwx-core = { path = "../siwx-core" }

anyhow = "1"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["full"] }
url = "2"
urlencoding = "2"
